client/src/style.css
.navbar{
    background-color: #41354D;
    height: 100px;
    color: #FFD195;
    margin-bottom: 15px;
    text-align: left;
    font-size: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.map{
    height: 400px;
    width: 700px;
}


.textbox{
    height: 30px;
    text-align: left;
    width: 20%;
    display: block;
    margin: 0 auto;
    justify-content: center;
    align-content: center;
}

.descriptionbox{
    height: 80px;
    text-align: top;
    align-items: top;
    width: 20%;
    justify-content: top;
    align-content: top;
}

.heading{
    text-align: left;
    font-size: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.basicButton{
    margin: 2px
}

.thumbnailImage{
    float: left;
    alt: "Can't Find image";
    width: 200px;
    height: 120px;
}

.thumbnailHeader {
    margin-left: 1000px
}

.mediumImage {
    size: 60%;
}

.background{
    background-color: blue
}

.smallImage{
    width: auto;
    height: 200px;
}

.para{
    font-size : 20px;
    padding : 0;
    margin : 0;
    line-height : 20px;
}

.sticky{
    position: fixed;
    top: 0;
    width: 100%;
}
/* Jibbys edited stylings*/

.title{
    margin-top: 4rem;
    background: #41354D;
    height: 70px;
    width:100%;
    left: 0;
    top: 0;
    color: #FFD195;
    font-family: 'Aspira';
    font-size: 30px;
    display: flex;
    justify-content: center;
    align-items: center;

}

/* For Navigation bar */

/* Desktop */
@media screen and (min-width: 720px) {
    .mainNavigation {
        position: fixed;
        left: 0;
        top: 0;
        width: 100%;
        background: #41354D;
        padding: 1rem;
    }

    .mainNavigationItems {
        display: flex;
    }

    .main-nav-links ul {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        margin-top: 5px;
        margin-left: 5px;
        margin-bottom: 0;
    }

    .main-nav-links li {
        margin-left: 30px;
    }

    .main-nav-links {
        list-style-type: none;
        list-style: none;
    }

    .navbar-toggle {
       display: none;
    }
}

@media screen and (max-width: 720px) {
      .main-nav-links {
          display: none;
      }

      .main-nav-links li {
          text-align: center;
          margin: 15px 0px;
      }

      .main-nav-links ul {
          margin: 0;
          padding: 0;
      }

      .main-nav-links {
          margin-left: 0rem;
      }
}

.mainNavigation {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    background: #41354D;
    align-items: center;
    padding: 1rem;
  }

  #nav-menu-icon {
      fill: #FFD195;
  }

.active {
    display: block;
}

.navbar-toggle {
  position: fixed;
  top: 0;
  right: 0;
  cursor: pointer;
  color: rgba(255,255,255,0.8);
  font-size: 24px;
  margin-top: 1.2rem;
  margin-right: 1.2rem;
}

  .mainNavigationLogo h1 {
    margin: 0;
    font-family: 'Aspira';
    font-size: 1.5rem;
    color: #FFD195;
  }

  .mainNavigationItems ul {
    list-style-type: none;
    list-style: none;
  }

  .mainNavigationItems a {
    text-decoration: none;
    color: #FFD195;
  }

  .mainNavigationItems a:hover,
  .mainNavigationItems a:active,
  .mainNavigationItems a.active {
      color: red;
  }

  .logout {
    margin-left: 1.5rem;
    padding: 0 1rem;
    text-decoration: none;
    margin: 0;
    color: #FFD195;
}

/* For Welcome Page */
.center {
    justify-content: center;
    align-items: center;
}

.load {
    width: 300;
    height: 400;
}

.gridDisplay {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
    grid-auto-rows: minmax(100px, auto);
    grid-gap: 20px;
}

.thumbnail {
    position: relative;
    width: 200px;
    height: 200px;
    overflow: hidden;
  }
  .thumbnail img {
    position: absolute;
    left: 50%;
    top: 50%;
    height: 100%;
    width: auto;
    place-content: center;
    -webkit-transform: translate(-50%,-50%);
        -ms-transform: translate(-50%,-50%);
            transform: translate(-50%,-50%);
}

#containerGrid{
    background-color: #FFD195;
    outline: 5px solid #DE7E44;
    display: inline-block;
    align-items: center;
    justify-content: center;

}

.toText{
    text-align: center;
    text-align-last: center;
    font-size: 30px;
    text-decoration: none;
    color: black !important;
}

/* For Signup and Signin */
#containerL {
    position: fixed;
    width: 340px;
    height: 282px;
    top: 35%;
    left: 50%;
    margin-top: -140px;
    margin-left: -170px;
	background: #fff;
    border-radius: 3px;
    border: 1px solid black;
    box-shadow: 0 5px 30px 20px #FFD195;
}

#containerS {
    position: fixed;
    width: 340px;
    height: 555px;
    top: 30%;
    left: 50%;
    margin-top: -140px;
    margin-left: -170px;
	background: #fff;
    border-radius: 3px;
    border: 1px solid black;
    box-shadow: 0 5px 30px 20px #FFD195;
}

form {
    margin: 0 auto;
    margin-top: 20px;
}
label {
    display: inline-block;
    margin-left: 18px;
    font-family: 'Aspira';
    font-size: 25px;
}
input {
    font-family: 'Aspira';
    font-size: 20px;
}
input[type=email],
input[type=password] {
    padding-left: 10px;
    margin: 10px;
    margin-top: 12px;
    margin-left: 18px;
    width: 290px;
    height: 35px;
}
#lower {
    background: #41354D;
    width: 100%;
    height: 60px;
    margin-top: 20px;
}
input[type=submit] {
    float: right;
    margin-right: 20px;
    margin-top: 10px;
    width: 100px;
    height: 40px;
    background-color: #ffc42e;
    border-color: #41354d;
}
input[type=submit]:hover{
    opacity:0.7
}

/* For Landing Page */
#containerLand {
    position: fixed;
    width: 340px;
    height: 200px;
    top: 30%;
    left: 50%;
    margin-top: -140px;
    margin-left: -170px;
	background: #FFD195;
    border-radius: 3px;
    border: 5px double black;
}

.landButton {
	background:linear-gradient(to bottom, #6b3d99 5%, #41354d 100%);
	border-radius:10px;
	cursor:pointer;
	color:#ffc42e;
    font-family: 'Aspira';
	font-size:25px;
	font-weight:bold;
	padding:20px 60px;
    text-decoration:none;
    margin-left: 65px;
    margin-top: 18px;
}
.landButton:hover {
	background:linear-gradient(to bottom, #41354d 5%, #6b3d99 100%);
	background-color:#41354d;
}

/*
General
*/

body {
    font-family: 'Aspira';
}


/*
Fonts
*/

@font-face {
    font-family: 'Aspira';
    src: url('Resources/aspira/Aspira-DEMO-webfont.woff2') format('woff2'),
         url('Resources/aspira/Aspira-DEMO-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}


/* CSS TO CHANGE ALL PAGES
html, body {
width: 100%;
height: 100%;
font-family: "Helvetica Neue", Helvetica, sans-serif;
-webkit-font-smoothing: antialiased;
background: white;
} */

